testing white space issue

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body {
     font-size: 13px;
+    overflow:scroll;
     line-height: 24px;
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #666;
@@ -781,13 +782,13 @@ background-color: #f8f8f8;
   margin-bottom: 0;
 }
 .background-image-hold {
-  width: 100%;
-  height: 100%;
-  top: 0;
+  max-width: 400px;
+  max-height: 400px;
+ /*  top: 0;
   left: 0;
   z-index: 1;
   background-size: cover;
-  background-position: 50% 50%;
+  background-position: 50% 50%; */
 }
 .textcon{
   padding: 60px 40px;
@@ -870,7 +871,7 @@ width: 100%;
     display:block;
     width: 100%;
   }
-  .background-image-hold {
+ /*  .background-image-hold {
     width: 100%;
     height: 100vh;
    justify-content: center;
@@ -878,7 +879,7 @@ width: 100%;
     z-index: 1;
     background-size: cover;
     display: flex;
-  }
+  } */
 }
 @media screen and (max-width:985px){
   .sect8{
@@ -973,15 +974,15 @@ li{
     transform:rotate(180deg);
 } 
 .dropdown ul {
-  width: 100%;
+  width: 10%;
   margin-bottom: 10px;
   padding: 6px 10px;
  
 }
-.fa-chevron-down{
+/* .fa-chevron-down{
   display: flex;
-  margin-left:620px ;
-}
+  margin-left:10px ;
+} */
 
 .show-menu .dropdown:hover {
   margin-bottom:3rem;
